--- a/src/Spryker/Yves/Braintree/Theme/demoshop/pay_pal.twig
+++ b/src/Spryker/Yves/Braintree/Theme/demoshop/pay_pal.twig
@@ -1,15 +1,15 @@
-<div class="payment-method payment-subform braintree-form braintree-paypal-form">
-	<h3>Braintree PayPal</h3>
+<div class="payment-method payment-subform braintree-form braintree-paypal-form payment-form" id="braintreePayPal">
+    <h3>Braintree PayPal</h3>
 
-	<div class="braintree">
-		<div class="braintree-loader show">Loading PayPal...</div>
+    <div class="braintree">
+        <div class="braintree-loader show">Loading PayPal...</div>
 
-		<div class="braintree-method braintree-paypal-method" data-braintree-client-token="{{ child.vars.clientToken }}">
-			<div id="braintree-paypal-container"></div>
-			<div class="braintree-error braintree-paypal-error field"></div>
-		</div>
+        <div class="braintree-method braintree-paypal-method" data-braintree-client-token="{{ child.vars.clientToken }}">
+            <div id="braintree-paypal-container"></div>
+            <div class="braintree-error braintree-paypal-error field"></div>
+        </div>
 
-		{{ form_errors(form.braintree_pay_pal) }}
-		{{ form_widget(form.braintree_pay_pal) }}
-	</div>
+        {{ form_errors(form.braintreePayPal) }}
+        {{ form_widget(form.braintreePayPal) }}
+    </div>
 </div>
