--- a/src/Spryker/Yves/Braintree/Theme/default/pay_pal.twig
+++ b/src/Spryker/Yves/Braintree/Theme/default/pay_pal.twig
@@ -1,7 +1,5 @@
 <div class="payment-method payment-subform braintree-form braintree-paypal-form payment-form" id="braintreePayPal">
-    <h3>Braintree PayPal</h3>
-
-    <div class="braintree">
+    <div class="braintree small-12 columns">
         <div class="braintree-loader show">Loading PayPal...</div>
 
         <div class="braintree-method braintree-paypal-method" data-braintree-client-token="{{ child.vars.clientToken }}">
